--- a/docs/_includes/navlinks.html
+++ b/docs/_includes/navlinks.html
@@ -1,7 +1,11 @@
 <hr>
+
+<p> page . previous_url: {{ page.previous.url }} </p>
+<p> page . next_url: {{ page.next_url.url }} </p>
+
 <div class="post_navi">
   {%- if page.previous.url -%}
-  <a class="post_navi-item nav_prev" href="nova64/{{ page.previous.url }}" title="{{ page.previous.title }}">
+  <a class="post_navi-item nav_prev" href="{{ page.previous.url }}" title="{{ page.previous.title }}">
     <div class="post_navi-arrow">&lt;</div><div class="post_navi-label">Previous Post</div><div><span>{{ page.previous.title }}</span></div>
   </a>
   {%- else -%}
@@ -10,7 +14,7 @@
   </a>
   {%- endif -%}
   {%- if page.next.url -%}
-  <a class="post_navi-item nav_next" href="nova64/{{ page.next.url }}" title="{{ page.next.title }}">
+  <a class="post_navi-item nav_next" href="{{ page.next.url }}" title="{{ page.next.title }}">
     <div class="post_navi-arrow">&gt;</div><div class="post_navi-label">Next Post</div><div><span>{{ page.next.title }}</span></div>
   </a>
   {%- else -%}
