--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -28,7 +28,8 @@
         <div class="footer-col footer-col-3">
           <p>{{ site.description | escape }}</p>
         </div>
-
+      
+      </div>
    </div>
   
 </footer>
