--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -4,6 +4,8 @@ layout: default
 <link href="/css/override.css" rel="stylesheet" type="text/css">
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
+  <p>Post tags: {{ site.tags }} {{ post.tags }} {{ page.tags }}</p>
+
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
@@ -13,7 +15,7 @@ layout: default
       </time>
       {% assign author = page.author | default: site.author.name %}
       {%- if author -%}
-        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}</span></span>
+        • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author.name }}</span></span>
       {%- endif -%}</p>
   </header>
 
