--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -4,7 +4,9 @@ layout: default
 <link href="/css/override.css" rel="stylesheet" type="text/css">
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <p>Post tags: {{ site.tags }} {{ post.tags }} {{ page.tags }}</p>
+  <p>Site tags: {{ site.tags }}</p>
+  <p>Post tags: {{ post.tags }}</p>
+  <p>Page tags: {{ page.tags }}</p>
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
