--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -7,6 +7,11 @@ layout: default
   <p>Site tags: {{ site.tags }}</p>
   <p>Post tags: {{ post.tags }}</p>
   <p>Page tags: {{ page.tags }}</p>
+  
+  <p>Site categories: {{ site.categories }}</p>
+  <p>Post categories: {{ post.categories }}</p>
+  <p>Page categories: {{ page.categories }}</p>
+  
 
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
