--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -21,7 +21,9 @@
             {%- for path in page_paths -%}
               {%- assign my_page = site.pages | where: "path", path | first -%}
               {%- if my_page.title -%}
-              <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                {% - if page.menu == 'main' -%}
+                  <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+                {%- endif -%}
               {%- endif -%}
             {%- endfor -%}
           </div>
