Adding comments to site

--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -29,5 +29,14 @@ layout: default
     {% include navlinks.html %}
   </div>
 
+<script src="https://utteranc.es/client.js"
+        repo="nova64"
+        issue-term="pathname"
+        label="pagesComent"
+        theme="preferred-color-scheme"
+        crossorigin="anonymous"
+        async>
+</script>
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
