--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -30,7 +30,7 @@ layout: default
   </div>
 
 <script src="https://utteranc.es/client.js"
-        repo="nova64"
+        repo="dmolinagarcia/nova64"
         issue-term="pathname"
         label="pagesComent"
         theme="preferred-color-scheme"
