--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -32,7 +32,7 @@ layout: default
 <script src="https://utteranc.es/client.js"
         repo="dmolinagarcia/nova64"
         issue-term="pathname"
-        label="pagesComent"
+        label="pagesComment"
         theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
