--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -4,8 +4,11 @@
       {%- assign default_paths = site.pages | map: "path" -%}
       {%- assign page_paths = site.header_pages | default: default_paths -%}
       {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
-      <img class="site-title" src="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova_small.png"/>
-      <a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
+      
+      <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+          <img class="site-title" src="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova_small.png"/>
+          {{ site.title | escape }}
+      </a>
   
       {%- if titles_size > 0 -%}
         <nav class="site-nav">
