--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -6,8 +6,8 @@
       {%- assign titles_size = site.pages | map: 'title' | join: '' | size -%}
       
       <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-          <img class="site-title" src="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova_small.png"/>
-          {{ site.title | escape }}
+          <img class="site-title" src="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova65_small.png" 
+               alt="{{ site.title | escape }}" />
       </a>
   
       {%- if titles_size > 0 -%}
