--- a/docs/_layouts/post.html
+++ b/docs/_layouts/post.html
@@ -4,9 +4,8 @@ layout: default
 <link href="/css/override.css" rel="stylesheet" type="text/css">
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
-  <p>Page categories: {{ page.categories }}</p>
+  <p>In category <a href="/nova64/categories/{{ page.categories }}"</a></p>
   
-
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
