--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -21,4 +21,6 @@
 
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
+  <link href="/nova64/css/override.css" rel="stylesheet" type="text/css">
+  <link href="/nova64/css/prism.css" rel="stylesheet" type="text/css">
 </head>
