--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -23,4 +23,5 @@
   <!-- end highlight.js support -->
   <link href="/nova64/css/override.css" rel="stylesheet" type="text/css">
   <link href="/nova64/css/prism.css" rel="stylesheet" type="text/css">
+  <meta name="google-site-verification" content="JJd1CQCDcTxV3aOz3FUFsEOrYGDTR3PDGf0-Ani8CC4" />
 </head>
