--- a/docs/_includes/sharelinks.html
+++ b/docs/_includes/sharelinks.html
@@ -34,9 +34,8 @@
 </div>
 
 <pre>
-
-{{ safeurl }}
-
-{{ site.url | site.baseurl | page.url}}
-
+safeurl : {{ safeurl }}
+siteurl : {{ site.url }}
+baseurl : {{ site.baseurl }}
+pageurl : {{ page.url }}
 </pre>
