--- a/docs/_includes/sharelinks.html
+++ b/docs/_includes/sharelinks.html
@@ -35,5 +35,5 @@
 
 <pre>
 safeurl : {{ safeurl }}
-fullurl : {{ site.url | "/" | site.baseurl | page.url }}
+fullurl : {{ site.url }}"/"{{ site.baseurl }}{{ page.url }}
 </pre>
