--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -4,6 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <meta property="og:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_medium.png"/>
+  <meta property="og:image:width" content="732"/>
+  <meta property="og:image:height" content="140"/>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
