--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -10,6 +10,10 @@
     {%- include google-analytics.html -%}
   {%- endif -%}
 
+<meta name="twitter:title" content="Development Diary" />
+<meta name="twitter:description" content="Follow the creation of the noVa64." />
+<meta name="twitter:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png" />
+
   <!-- highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
