--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -4,15 +4,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   {%- seo -%}
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
-  <meta property="og:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png"/>
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
 
-<meta name="twitter:title" content="Development Diary" />
-<meta name="twitter:description" content="Follow the creation of the noVa64." />
-<meta name="twitter:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png" />
+  <!-- Custom Social Tags -->
+  <meta property="og:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png?2"/>
+  <meta name="twitter:description" content="Follow the creation of the noVa64." />
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png?2" />
 
   <!-- highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
