--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -2,12 +2,23 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Begin SEO tag -->
   {%- seo -%}
+  <!-- Begin SEO Tag -->
+
+  <!-- Begin CSS -->
+  <link href="/nova64/css/override.css" rel="stylesheet" type="text/css">
+  <link href="/nova64/css/prism.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
+  <!-- END CSS -->
+
+  <!-- Begin feed meta -->
   {%- feed_meta -%}
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+  <!-- End feed meta -->
 
   <!-- Custom Social Tags -->
   <meta property="og:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png?2"/>
@@ -17,16 +28,14 @@
   <!-- highlight.js support -->
   <link rel="stylesheet" href="/js/highlightjs/styles/github.css">
   <link rel="stylesheet" href="/js/highlightjs/styles/ssms.css" />
-
   <script type="text/javascript" src="/js/highlightjs/highlight.min.js"></script>
-
   <script type="text/javascript" src="/js/highlightjs/languages/plaintext.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/powershell.min.js"></script>
   <script type="text/javascript" src="/js/highlightjs/languages/tsql.min.js"></script>
-
   <script type="text/javascript"> hljs.highlightAll(); </script>
   <!-- end highlight.js support -->
-  <link href="/nova64/css/override.css" rel="stylesheet" type="text/css">
-  <link href="/nova64/css/prism.css" rel="stylesheet" type="text/css">
+
+  <!-- Begin Google Search Verificator -->
   <meta name="google-site-verification" content="JJd1CQCDcTxV3aOz3FUFsEOrYGDTR3PDGf0-Ani8CC4" />
+  <!-- End Google Search Verificator -->
 </head>
