--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -3,9 +3,34 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Begin SEO tag -->
-  {%- seo -%}
-  <!-- Begin SEO Tag -->
+  <!-- Begin SEO -->
+  <title>noVa64 | development diary</title>
+  <meta name="generator" content="Jekyll v3.9.2" />
+  <meta name="author" content="Dani Molina" />
+  <meta name="description" content="noVa64 development diary" />
+  <link rel="canonical" href="https://dmolinagarcia.github.io/nova64/" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://dmolinagarcia.github.io/nova64">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="noVa64">
+  <meta property="og:description" content="noVa64 development diary">
+  <meta property="og:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png">
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:site_name" content="noVa64" />
+  
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="dmolinagarcia.github.io">
+  <meta property="twitter:url" content="https://dmolinagarcia.github.io/nova64">
+  <meta name="twitter:title" content="noVa64">
+  <meta name="twitter:description" content="noVa64 development diary">
+  <meta name="twitter:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png">  
+  
+  <script type="application/ld+json">
+  {"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Dani Molina"},"description":"noVa64 development diary","headline":"noVa64","name":"noVa64","url":"https://dmolinagarcia.github.io/nova64/"}
+  </script>
+  <!-- End SEO -->
 
   <!-- Begin CSS -->
   <link href="/nova64/css/override.css" rel="stylesheet" type="text/css">
@@ -13,12 +38,7 @@
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <!-- END CSS -->
 
-  <!-- Begin feed meta -->
   {%- feed_meta -%}
-  {%- if jekyll.environment == 'production' and site.google_analytics -%}
-    {%- include google-analytics.html -%}
-  {%- endif -%}
-  <!-- End feed meta -->
 
   <!-- Custom Social Tags -->
   <meta property="og:image" content="https://raw.githubusercontent.com/dmolinagarcia/nova64/main/docs/img/logo_nova64_ogimage.png?2"/>
